--- a/metric-learn-jmlr.bib
+++ b/metric-learn-jmlr.bib
@@ -18,7 +18,7 @@
   
 @ARTICLE{Liu19,
   author = {Kuan Liu and Aur\'elien Bellet},
-  title = {Escaping the Curse of Dimensionality in Similarity Learning: Efficient Frank-Wolfe Algorithm and Generalization Bounds},
+  title = {{Escaping the Curse of Dimensionality in Similarity Learning: Efficient Frank-Wolfe Algorithm and Generalization Bounds}},
   journal = {Neurocomputing},
   year = {2019},
   volume = {333},
@@ -27,13 +27,13 @@
 
 @inproceedings{liu15,
   author    = {Weiwei Liu and Ivor W. Tsang},
-  title     = {Large Margin Metric Learning for Multi-Label Prediction},
+  title     = {{Large Margin Metric Learning for Multi-Label Prediction}},
   booktitle = {AAAI},
   year      = {2015}
 }
 
 @article{scikit-learn,
- title={Scikit-learn: Machine Learning in {P}ython},
+ title={{Scikit-learn: Machine Learning in {P}ython}},
  author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
          and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
          and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
@@ -72,7 +72,7 @@
 
 @inproceedings{Law13,
  author = {Law, Marc T. and Thome, Nicolas and Cord, Matthieu},
- title = {Quadruplet-Wise Image Similarity Learning},
+ title = {{Quadruplet-Wise Image Similarity Learning}},
  booktitle = {Proceedings of the 2013 IEEE International Conference on Computer Vision},
  series = {ICCV '13},
  year = {2013},
@@ -89,41 +89,26 @@
 
 @article{Weinberger09,
  author = {Weinberger, Kilian Q. and Saul, Lawrence K.},
- title = {Distance Metric Learning for Large Margin Nearest Neighbor Classification},
- journal = {J. Mach. Learn. Res.},
- issue_date = {12/1/2009},
+ title = {{Distance Metric Learning for Large Margin Nearest Neighbor Classification}},
+ journal = {Journal of Machine Learning Research},
  volume = {10},
- month = jun,
  year = {2009},
- issn = {1532-4435},
- pages = {207--244},
- numpages = {38},
- url = {http://dl.acm.org/citation.cfm?id=1577069.1577078},
- acmid = {1577078},
- publisher = {JMLR.org},
+ pages = {207--244}
 } 
 
 
 @inproceedings{Goldberger04,
  author = {Goldberger, Jacob and Roweis, Sam and Hinton, Geoff and Salakhutdinov, Ruslan},
- title = {Neighbourhood Components Analysis},
- booktitle = {Proceedings of the 17th International Conference on Neural Information Processing Systems},
- series = {NIPS'04},
- year = {2004},
- location = {Vancouver, British Columbia, Canada},
- pages = {513--520},
- numpages = {8},
- url = {http://dl.acm.org/citation.cfm?id=2976040.2976105},
- acmid = {2976105},
- publisher = {MIT Press},
- address = {Cambridge, MA, USA},
+ title = {{Neighbourhood Components Analysis}},
+ booktitle = {NIPS},
+ year = {2004}
 } 
 
 
 @article{Sugiyama07,
-  title={Dimensionality Reduction of Multimodal Labeled Data by Local Fisher Discriminant Analysis},
+  title={{Dimensionality Reduction of Multimodal Labeled Data by Local Fisher Discriminant Analysis}},
   author={Masashi Sugiyama},
-  journal={J. Mach. Learn. Res.},
+  journal={Journal of Machine Learning Research},
   year={2007},
   volume={8},
   pages={1027-1061}
@@ -133,10 +118,8 @@
 @inproceedings{Shental02,
 author = {Shental, Noam and Hertz, Tomer and Weinshall, Daphna and Pavel, Misha},
 year = {2002},
-pages = {181-185},
-title = {Adjustment Learning and Relevant Component Analysis},
-booktitle = {ECCV},
-doi = {10.1007/3-540-47979-1_52}
+title = {{Adjustment Learning and Relevant Component Analysis}},
+booktitle = {ECCV}
 }
 
 @inproceedings{Xing2002a,
@@ -153,51 +136,25 @@ doi = {10.1007/3-540-47979-1_52}
 
 @inproceedings{Qi09,
  author = {Qi, Guo-Jun and Tang, Jinhui and Zha, Zheng-Jun and Chua, Tat-Seng and Zhang, Hong-Jiang},
- title = {An Efficient Sparse Metric Learning in High-dimensional Space via L1-penalized Log-determinant Regularization},
- booktitle = {Proceedings of the 26th Annual International Conference on Machine Learning},
- series = {ICML '09},
- year = {2009},
- isbn = {978-1-60558-516-1},
- location = {Montreal, Quebec, Canada},
- pages = {841--848},
- numpages = {8},
- url = {http://doi.acm.org/10.1145/1553374.1553482},
- doi = {10.1145/1553374.1553482},
- acmid = {1553482},
- publisher = {ACM},
- address = {New York, NY, USA},
+ title = {{An Efficient Sparse Metric Learning in High-dimensional Space via L1-penalized Log-determinant Regularization}},
+ booktitle = {ICML},
+ year = {2009}
 } 
 
 
 @inproceedings{Davis07,
  author = {Davis, Jason V. and Kulis, Brian and Jain, Prateek and Sra, Suvrit and Dhillon, Inderjit S.},
- title = {Information-theoretic Metric Learning},
- booktitle = {Proceedings of the 24th International Conference on Machine Learning},
- series = {ICML '07},
- year = {2007},
- isbn = {978-1-59593-793-3},
- location = {Corvalis, Oregon, USA},
- pages = {209--216},
- numpages = {8},
- url = {http://doi.acm.org/10.1145/1273496.1273523},
- doi = {10.1145/1273496.1273523},
- acmid = {1273523},
- publisher = {ACM},
- address = {New York, NY, USA},
+ title = {{Information-Theoretic Metric Learning}},
+ booktitle = {ICML},
+ year = {2007}
 } 
 
 @INPROCEEDINGS{Liu12, 
 author={E. Y. {Liu} and Z. {Guo} and X. {Zhang} and V. {Jojic} and W. {Wang}}, 
-booktitle={2012 IEEE 12th International Conference on Data Mining}, 
-title={Metric Learning from Relative Comparisons by Minimizing Squared Residual}, 
-year={2012}, 
-volume={}, 
-number={}, 
-pages={978-983}, 
-keywords={convex programming;learning (artificial intelligence);minimisation;pattern clustering;squared residual minimisation;relative distance comparison;distance function;pairwise constraint;Mahalanobis distance metric learning;convex objective function minimisation;learned metric matrix;clustering accuracy;Measurement;Accuracy;Clustering algorithms;Symmetric matrices;Linear programming;Covariance matrix;Convergence;metric learning;Mahalanobis metric;relative comparisons}, 
-doi={10.1109/ICDM.2012.38}, 
-ISSN={1550-4786}, 
-month={Dec},}
+booktitle={ICDM}, 
+title={{Metric Learning from Relative Comparisons by Minimizing Squared Residual}}, 
+year={2012}
+}
 
 @article{Kulis13,
   added-at = {2018-05-15T20:31:27.000+0200},
@@ -211,7 +168,7 @@ month={Dec},}
   pages = {287--364},
   publisher = {Now Publishers, Inc.},
   timestamp = {2018-05-15T20:31:27.000+0200},
-  title = {Metric learning: A survey},
+  title = {{Metric learning: A survey}},
   volume = 5,
   year = 2013
 }
@@ -229,27 +186,17 @@ month={Dec},}
 
 
 @InProceedings{Weinberger07,
-  title = 	 {Metric Learning for Kernel Regression},
+  title = 	 {{Metric Learning for Kernel Regression}},
   author = 	 {Kilian Q. Weinberger and Gerald Tesauro},
-  booktitle = 	 {Proceedings of the Eleventh International Conference on Artificial Intelligence and Statistics},
-  pages = 	 {612--619},
-  year = 	 {2007},
-  editor = 	 {Marina Meila and Xiaotong Shen},
-  volume = 	 {2},
-  series = 	 {Proceedings of Machine Learning Research},
-  address = 	 {San Juan, Puerto Rico},
-  month = 	 {21--24 Mar},
-  publisher = 	 {PMLR},
-  pdf = 	 {http://proceedings.mlr.press/v2/weinberger07a/weinberger07a.pdf},
-  url = 	 {http://proceedings.mlr.press/v2/weinberger07a.html},
-  abstract = 	 {Kernel regression is a well-established method for nonlinear regression in which the target value for a test point is estimated using a weighted average of the surrounding training samples. The weights are typically obtained by applying a distance-based kernel function to each of the samples, which presumes the existence of a well-defined distance metric. In this paper, we construct a novel algorithm for supervised metric learning, which learns a distance function by directly minimizing the leave-one-out regression error. We show that our algorithm makes kernel regression comparable with the state of the art on several benchmark datasets, and we provide efficient implementation details enabling application to datasets with  O(10k) instances. Further, we show that our algorithm can be viewed as a supervised variation of PCA and can be used for dimensionality reduction and high dimensional data visualization.}
+  booktitle = 	 {AISTATS},
+  year = 	 {2007}
 }
 
 
 @InProceedings{Huang12,
   author =    {Gary B. Huang and Marwan Mattar and Honglak Lee and 
                Erik Learned-Miller},
-  title =     {Learning to Align from Scratch},
+  title =     {{Learning to Align from Scratch}},
   booktitle = {NIPS},
   year =      {2012}
 }
