Add CJ’s affiliation Signed-off-by: terrytangyuan <terrytangyuan@gmail.com>

--- a/metric-learn-jmlr.bib
+++ b/metric-learn-jmlr.bib
@@ -1,3 +1,9 @@
+@inproceedings{Schultz2003a,
+	Author = {Matthew Schultz and Thorsten Joachims},
+	Booktitle = {NIPS},
+	Title = {{L}earning a {D}istance {M}etric from {R}elative {C}omparisons},
+	Year = {2003}}
+	
 @misc{Bellet13,
     title={A Survey on Metric Learning for Feature Vectors and Structured Data},
     author={Aurélien Bellet and Amaury Habrard and Marc Sebban},
