minted option to allow arXiv submission

--- a/metric-learn-jmlr.tex
+++ b/metric-learn-jmlr.tex
@@ -9,7 +9,7 @@
 % is archived at http://www.jmlr.org/format/natbib.pdf
 
 \usepackage{jmlr2e}
-\usepackage{minted}
+\usepackage[cachedir=.,finalizecache]{minted}
 \usepackage[utf8]{inputenc} % allow utf-8 input
 \usepackage{graphicx}
 \usepackage{caption}
