add picture and gitignore

--- a/metric-learn-jmlr.tex
+++ b/metric-learn-jmlr.tex
@@ -160,6 +160,10 @@ Note that $D_L$ can also be written as $D_L(x, x') = \sqrt{(x - x')^\top M (x - 
         \caption{pair supervision}\label{fig:pairs}
     \end{subfigure}
     \begin{subfigure}[t]{0.40\textwidth}
+        \centering \includegraphics[scale=0.45]{triplets.pdf}
+	\caption{triplet supervision}\label{fig:triplets}
+    \end{subfigure}
+    \begin{subfigure}[t]{0.40\textwidth}
         \centering \includegraphics[scale=0.45]{quadruplets.pdf}
         \caption{quadruplet supervision}\label{fig:quadruplets}
     \end{subfigure}
