--- a/metric-learn-jmlr.bib
+++ b/metric-learn-jmlr.bib
@@ -206,3 +206,10 @@ year={2012}
   booktitle = {NIPS},
   year =      {2012}
 }
+
+@inproceedings{Shi15,
+  title={Sparse compositional metric learning},
+  author={Shi, Yuan and Bellet, Aur{\'e}lien and Sha, Fei},
+  booktitle={Twenty-Eighth AAAI Conference on Artificial Intelligence},
+  year={2014}
+}
